--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.2.2",
     "express": "^4.18.2",
     "get-image-colors": "^4.0.1",
-    "puppeteer": "^19.4.1"
+    "puppeteer": "^19.4.1",
+    "stockfish": "10.0.2"
   }
 }
