--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/puppeteer": "^7.0.4",
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "get-image-colors": "^4.0.1",
     "puppeteer": "^19.4.1",
